add Truffle nodes