@@ -1,5 +1,6 @@
 plugins {
     kotlin("jvm")
+    java
 }
 
 repositories {
@@ -20,4 +21,20 @@ dependencies {
     testImplementation(project(":parser"))
     testImplementation(project(":test"))
     testImplementation("io.kotest:kotest-runner-junit5:5.6.2")
+}
+
+tasks {
+    withType<JavaCompile> {
+        options.compilerArgs.apply {
+            addAll(
+                listOf(
+                    "--add-exports", "org.graalvm.truffle/com.oracle.truffle.api=ALL-UNNAMED",
+                    "--add-exports", "org.graalvm.truffle/com.oracle.truffle.nodes=ALL-UNNAMED",
+                    "--add-exports", "org.graalvm.truffle/com.oracle.truffle.staticobject=ALL-UNNAMED",
+                    "--add-exports", "org.graalvm.truffle/com.oracle.truffle.api.dsl=ALL-UNNAMED",
+                    "--add-exports", "org.graalvm.truffle/com.oracle.truffle.api.frame=ALL-UNNAMED"
+                )
+            )
+        }
+    }
 }
